--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ToDo List</title>
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -19,16 +22,24 @@
     <main>
         <div class="container">
             <h1>To-Do List</h1>
+            <h2>Dodaj zadanie</h2>
+            <form action="" class="addTask">
+                <div class="inputWrap">
+                    <input type="text">
+                    <button>
+                        <i class="fas fa-plus"></i>
+                    </button>
+                </div>
+            </form>
             <div class="list">
-                <h2>Moje zadania</h2>
-                <ul>
-                    <li>Task 1</li>
-                    <li>Task 2</li>
-                    <li>Task 3</li>
+                <h2>Moje zadania:</h2>
+                <ul class="taskList">
+                    <p>Brak zadań do wykonania</p>
                 </ul>
             </div>
         </div>
     </main>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
