Added Fetch API + refactioring

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </nav>
     <main>
         <div class="container">
-            <h1>To-Do List</h1>
+            <h1>To Do List</h1>
             <h2>Dodaj zadanie</h2>
             <form action="" class="addTask">
                 <div class="inputWrap">
@@ -34,12 +34,12 @@
             <div class="list">
                 <h2>Moje zadania:</h2>
                 <ul class="taskList">
-                    <p>Brak zadań do wykonania</p>
+                    <!-- <p>Brak zadań do wykonania</p> -->
                 </ul>
             </div>
         </div>
     </main>
-    <script src="js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
